@@ -1,3 +1,6 @@
+* Mon Apr 30 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.4-0
+- Added 'svckill::mode' to be 'enforcing' in STIG and 800-53 modes
+
 * Fri Apr 27 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
 - Fixed the inappropriate value of useradd::useradd::inactive in
   the DISA STIG profiles.  It is now set to 0.
